# steveplays_com

./: Cargo.toml  Dockerfile  README.md  index.html
.github/workflows/: build_and_push_docker_image_to_container_registry.yml  continous_integration.yml
.zed/: tasks.json
backend/: Cargo.toml
backend/resources/art/: 2_planets_viewed_from_outer_space.json  desert_under_a_lush_moon.json  forest_scene.json  grass_swaying_in_wind.json
backend/resources/projects/demos/: godot_4_volumetrics_demo.json
backend/resources/projects/factorio/: no_more_long_handed_inserters.json
backend/resources/projects/minecraft/: biome_fog.json  blendium.json  blinkload.json  cloche.json  distant_horizons.json  docker_minecraft_server.json  faster_random.json  fog.json  forgero.json  lod_entity_rendering.json  loqui.json  noisium.json  path_under_fence_gates.json  plasmid.json  replete.json  restart_server.json  simple_seasons.json  steves_realistic_sleep.json
backend/resources/projects/networking/: nularc.json  spaceship_game.json
backend/resources/projects/rust/: bevy_motion_matching.json  git_diff_sync.json  steveplays_portfolio.json
backend/resources/projects/satisfactory/: ficsit_chat.json
backend/src/: lib.rs  main.rs
backend/src/cli/: arguments.rs
backend/src/routes/: index.rs
common/: Cargo.toml
common/src/: data.rs  lib.rs
common/src/data/: art.rs  author.rs  project.rs
common/src/ui/: components.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  styles.css
src/: main.rs  resource.rs
src/resource/: project_deserializer.rs
(+9 files in other folders)
