[package]
name = "backend"
version = "2.0.0"
edition = "2021"

[dependencies]
common = { version = "*", path = "../common" }
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
glob = "0.3.1"
static_init = "1.0.3"
yew = { version = "0.21", features = ["ssr"] }
yew-router = "0.18"
