[package]
name = "backend"
version = "2.0.0"
edition.workspace = true

[dependencies]
common = { version = "*", path = "../common" }
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
glob = "0.3.1"
static_init = "1.0.3"
yew = { version = "0.22", features = ["ssr"] }
yew-router = "0.19"
clap = { version = "4.5.16", features = ["derive"] }
normpath = "1.3.0"
